# ao_viewport_guide

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md  c_cpp_properties.json
resources/shaders/: aoViewportGuide.ogsfx
scripts/: aoViewportGuideOptionBox.mel
src/: aoViewportGuideCommon.h  aoViewportGuideDrawOverride.cpp  aoViewportGuideDrawOverride.h  aoViewportGuideGate.cpp  aoViewportGuideGate.h  aoViewportGuideLocator.cpp  aoViewportGuideLocator.h  aoViewportGuideOverlayOp.cpp  aoViewportGuideOverlayOp.h  aoViewportGuideOverride.cpp  aoViewportGuideOverride.h  aoViewportGuidePlugin.cpp  aoViewportGuideRenderOverride.cpp  aoViewportGuideRenderOverride.h  aoViewportGuideSettings.cpp  aoViewportGuideSettings.h  ao_frameguide.cpp  pluginMain.cpp
tools/: build.ps1  configure.ps1
